--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context="com.fire.weatherapp.view.main.MainActivity"
-    >
-  <include layout="@layout/toolbar"/>
+<layout>
+
+  <data>
+    <variable
+        name="viewModel"
+        type="com.fire.weatherapp.viewmodel.main.MainViewModel"
+        />
+  </data>
+  <RelativeLayout
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:tools="http://schemas.android.com/tools"
+      android:id="@+id/activity_main"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@color/colorPrimary"
+      tools:context="com.fire.weatherapp.view.main.MainActivity"
+      >
+
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar_include"
+        />
 
 
-</RelativeLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+  </RelativeLayout>
+</layout>
